# Brainstorming-agent-Server-

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  sockets_manager.py
.github/workflows/: server.yml
agents/: __init__.py  agent_communication.py
router/agents/: __init__.py  bio.py  create_council.py  live_meeting_room.py  meeting.py
router/auth/: auth.py
utils/: auth.py  email.py  store.py
utils/agents/: __init__.py  agent_bio.py  agent_human_voice.py  agent_state.py  agent_tts.py  agents.py  summarizer.py  vector_store.py
